# nu-events

./: .gitignore  README.md  docker-compose.yml
backend/: alembic.ini  browser_search.py  cdp_search.js  cdp_search.mjs  cdp_search_bing.js  discover_handles.py  discover_handles_v2.py  discover_progress.json  emails_dump.json  ig_cookies.json  ig_direct_search.js  nu_events.db-journal  orgs_to_discover.json  package.json  processed_posts.json  pyproject.toml  render.yaml  scrape_state.json
backend/alembic/: env.py
backend/data/: organizations.json
backend/scripts/: com.nuevents.scraper.plist  discover_handles.py  discover_handles_web.py  import_handles.py  install_scheduler.sh  launchd_wrapper.sh  scheduled_scrape.py  scrape_planitpurple_full.py  seed_organizations.py  setup_overnight_wake.sh  sync_to_remote.py
backend/src/: __init__.py  config.py  main.py
backend/src/api/: __init__.py
backend/src/database/: __init__.py  session.py
backend/src/middleware/: auth.py
backend/src/models/: __init__.py  email_ingest.py  event.py  organization.py
backend/src/schemas/: __init__.py  event.py  organization.py
backend/src/scrapers/: __init__.py  base.py  northwestern_events.py  planitpurple.py  wildcat_connection.py
backend/src/services/: batch_classifier.py  dedup.py  email_parser.py  event_service.py  event_validator.py  gmail_auth.py  gmail_poller.py  (+5 more)
backend/tests/: __init__.py  conftest.py  test_api.py  test_dedup.py  test_email_parser.py  test_gmail_poller.py  test_llm_parser.py  test_models.py  test_organizations.py  test_scrapers.py  test_update.py
(+35 files in other folders)
